# trim-vid-fastApi

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  start.sh  streamlit_app.py  video_processor.py
static/: index.html
