[project]
name = "trim-vid-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "fastapi[standard]>=0.116.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "starlette>=0.47.2",
    "uuid-utils>=0.11.0",
    "uvicorn[standard]>=0.35.0",
]
