[project]
name = "trim-vid-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "cloudscraper>=1.2.71",
    "fastapi[standard]>=0.116.1",
    "pillow>=11.0.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "starlette>=0.47.2",
    "streamlit>=1.38.0",
    "uuid-utils>=0.11.0",
    "uvicorn[standard]>=0.35.0",
    "yt-dlp>=2024.10.7",
]
